--- a/java-maven-sonar-argocd-helm-k8s/spring-boot-app/JenkinsFile
+++ b/java-maven-sonar-argocd-helm-k8s/spring-boot-app/JenkinsFile
@@ -67,6 +67,14 @@ agent {
                     git config user.email "yashwanth1999v@gmail.com"
                     git config user.name "yash1999v"
 
+
+# Verify file exists
+        DEPLOYMENT_FILE="java-maven-sonar-argocd-helm-k8s/spring-boot-app-manifests/deployment.yml"
+        if [ ! -f "$DEPLOYMENT_FILE" ]; then
+          echo "Error: $DEPLOYMENT_FILE not found"
+          exit 1
+        fi
+
                     BUILD_NUMBER=${BUILD_NUMBER}
                     sed -i "s/replaceImageTag/${BUILD_NUMBER}/g" java-maven-sonar-argocd-helm-k8s/spring-boot-app-manifests/deployment.yml
                     git add java-maven-sonar-argocd-helm-k8s/spring-boot-app-manifests/deployment.yml
