--- a/java-maven-sonar-argocd-helm-k8s/spring-boot-app/JenkinsFile
+++ b/java-maven-sonar-argocd-helm-k8s/spring-boot-app/JenkinsFile
@@ -39,7 +39,7 @@ pipeline {
     stage('Static Code Analysis') {
       agent {
         docker {
-          image 'maven:3.9.6-openjdk-17'
+          image 'maven:3.9.6-eclipse-temurin-17'
           args '--user root -v /var/run/docker.sock:/var/run/docker.sock -v $HOME/.m2:/root/.m2'
         }
       }
